fix hanging job